[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "server"
version = "0.0.1"
dependencies = ["fastapi", "loguru", "ormar[sqlite]", "python-multipart", "uvicorn[standard]"]

[[project.authors]]
name = "Dragon-GCS"
email = "878173121@qq.com"
[tool.setuptools]
packages = ["server"]

[tool.start]
dev-dependencies = ["pylint", "yapf"]

[tool.yapf]
based_on_style = "google"
COLUMN_LIMIT = 89
blank_line_before_nested_class_or_def = false
blank_lines_between_top_level_imports_and_variables = 1
DEDENT_CLOSING_BRACKETS = false
